[gd_scene load_steps=5 format=3 uid="uid://bqx4csbfucq3m"]

[ext_resource type="Theme" uid="uid://cuognvkm850tx" path="res://assets/themes/inventory_theme.tres" id="1_qopkv"]
[ext_resource type="Script" path="res://scripts/ui/inventory/item_slot_container.gd" id="2_so6ge"]
[ext_resource type="Texture2D" uid="uid://0b3v6vfacdwv" path="res://assets/sprites/sword.png" id="3_ixuqm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rt5be"]
content_margin_left = 226.0
content_margin_top = 20.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[node name="ItemSlotContainer" type="HBoxContainer"]
theme = ExtResource("1_qopkv")
script = ExtResource("2_so6ge")

[node name="ItemButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_qopkv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rt5be")
text = "Sword"
flat = true
alignment = 0
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="ItemButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 32.0
offset_bottom = 16.0
grow_vertical = 2
theme_override_constants/margin_left = 116
theme_override_constants/margin_top = 5

[node name="ItemIcon" type="TextureRect" parent="ItemButton/MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_ixuqm")

[node name="QuantityLabel" type="Label" parent="ItemButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -38.5
offset_bottom = 38.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.05
theme = ExtResource("1_qopkv")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
